Moves Config / Dashboard sections of LandingPage into separate components.  Begins to utilize vue-router.  Adds vuex for UI state

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
         "__static": true
     },
     "rules": {
+        "import/no-unresolved": 0,
         "linebreak-style": "off",
         "semi": 0
     },
