--- a/package.json
+++ b/package.json
@@ -79,13 +79,15 @@
     "vue": "^2.5.19",
     "vue-electron": "^1.0.6",
     "vue-i18n": "^8.4.0",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.2.0",
     "@babel/plugin-transform-runtime": "7.2.0",
     "@babel/preset-env": "7.2.0",
     "@babel/register": "7.0.0",
+    "@babel/runtime": "^7.2.0",
     "@types/jest": "^23.3.10",
     "ajv": "^6.6.1",
     "babel-loader": "8.0.4",
